src/main/java/com/example/team_work_management/exception/error/GroupNotFoundException.java
package com.example.team_work_management.exception.error;

public class GroupNotFoundException extends RuntimeException{
    public GroupNotFoundException(String message){
        super(message);
    }
}
